force-app/main/default/objects/DocGen_Settings__c/fields/Max_Child_Lists__c.field-meta.xml
<CustomField>
    <fullName>Max_Child_Lists__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Maximum number of child relationship lists allowed in the DocGen query builder. Controls the UI limit in the template configuration.</description>
    <label>Max Child Lists</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>