force-app/main/default/objects/DocGen_Settings__c/fields/Max_Parent_Fields__c.field-meta.xml
<CustomField>
    <fullName>Max_Parent_Fields__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Maximum number of parent (relationship) fields allowed in the DocGen query builder. Controls the UI limit in the template configuration.</description>
    <label>Max Parent Fields</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>